--- a/hw03/config
+++ b/hw03/config
@@ -41,7 +41,7 @@ DOXYFILE_ENCODING      = UTF-8
 # title of most generated pages and in a few other places.
 # The default value is: My Project.
 
-PROJECT_NAME           = "CS 361 - Merge Sort with Threads"
+PROJECT_NAME           = "CS 361 - Merge Sort with Threads by Cole Bardin"
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. This
 # could be handy for archiving the generated documentation or if some version
