--- a/final/makefile
+++ b/final/makefile
@@ -4,18 +4,14 @@ STD=--std=c++17 -pthread
 SRC=src
 OBJ=obj
 BIN=bin
-EXE=ride
+EXE=safari
 
-${EXE}: ${SRC}/main.cpp ${OBJ}/semaphore.o ${SRC}/channel.h
+${EXE}: ${SRC}/main.cpp ${SRC}/channel.h
 	[ -d $(BIN) ] || mkdir -p $(BIN)
-	${CC} ${STD} -o ${BIN}/${EXE} ${SRC}/main.cpp ${OBJ}/semaphore.o
-
-${OBJ}/semaphore.o: ${SRC}/semaphore.h ${SRC}/semaphore.cpp 
-	[ -d $(OBJ) ] || mkdir -p $(OBJ)
-	${CC} ${CFLAGS} -c -o ${OBJ}/semaphore.o ${SRC}/semaphore.cpp
+	${CC} ${STD} -o ${BIN}/${EXE} ${SRC}/main.cpp 
 
 run: ${EXE}
-	${BIN}/${EXE} 7 9 || true
+	${BIN}/${EXE} 16 3 || true
 
 .PHONY: doc
 doc:
